<resources>
    <string name="app_name">ChooseUser</string>
    <string name="to_registration">Зарегистрироваться</string>
    <string name="login_process">Войти</string>
    <string name="back">Вход</string>
    <string name="telephone_or_email">Телефон или Email</string>
    <string name="restore_password">Забыли пароль?</string>
    <string name="password">Пароль</string>
    <string name="not_internet_connection">Нет подключения к интернет</string>
    <string name="short_password">Поле логина или пароля не может быть пустым</string>
    <string name="wrong_login">Пароль может быть только почта или телефон</string>
    <string name="registration">Регистрация</string>
    <string name="enter_last_name">Введите фамилию</string>
    <string name="enter_email">Введите e-mail</string>
    <string name="enter_password">Введите пароль</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="enter_name">Введите имя</string>
    <string name="all_fields_must_be_filled">Все поля должны быть заполнены</string>
    <string name="password_not_confirm">Проверьте правильность ввода пароля</string>
    <string name="incorrectly_email">Неверный e-mail</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
</resources>
